parserx/y.output

state 0
	$accept: .translation_unit $end 

	CONTRACT  shift 6
	FUNC  shift 5
	.  error

	translation_unit  goto 1
	function_declaration  goto 3
	contract_declaration  goto 4
	top_declaration  goto 2

state 1
	$accept:  translation_unit.$end 
	translation_unit:  translation_unit.top_declaration 

	$end  accept
	CONTRACT  shift 6
	FUNC  shift 5
	.  error

	function_declaration  goto 3
	contract_declaration  goto 4
	top_declaration  goto 7

state 2
	translation_unit:  top_declaration.    (83)

	.  reduce 83 (src line 318)


state 3
	top_declaration:  function_declaration.    (81)

	.  reduce 81 (src line 313)


state 4
	top_declaration:  contract_declaration.    (82)

	.  reduce 82 (src line 315)


state 5
	function_declaration:  FUNC.IDENT function_signature compound_statement 

	IDENT  shift 8
	.  error


state 6
	contract_declaration:  CONTRACT.IDENT LBRACE contract_specifiers RBRACE 
	contract_declaration:  CONTRACT.IDENT LBRACE RBRACE 

	IDENT  shift 9
	.  error


state 7
	translation_unit:  translation_unit top_declaration.    (84)

	.  reduce 84 (src line 320)


state 8
	function_declaration:  FUNC IDENT.function_signature compound_statement 

	LPAREN  shift 12
	.  error

	function_argument_list  goto 11
	function_signature  goto 10

state 9
	contract_declaration:  CONTRACT IDENT.LBRACE contract_specifiers RBRACE 
	contract_declaration:  CONTRACT IDENT.LBRACE RBRACE 

	LBRACE  shift 13
	.  error


state 10
	function_declaration:  FUNC IDENT function_signature.compound_statement 

	LBRACE  shift 15
	.  error

	compound_statement  goto 14

state 11
	function_signature:  function_argument_list.type 
	function_signature:  function_argument_list.    (47)

	T_BOOL  shift 17
	T_INT  shift 18
	T_FLOAT  shift 19
	T_MONEY  shift 20
	T_STRING  shift 21
	T_BYTES  shift 22
	T_ARRAY  shift 23
	T_MAP  shift 24
	T_FILE  shift 25
	.  reduce 47 (src line 237)

	type  goto 16

state 12
	function_argument_list:  LPAREN.RPAREN 
	function_argument_list:  LPAREN.variable_specifier RPAREN 

	IDENT  shift 29
	RPAREN  shift 26
	.  error

	ident_list  goto 28
	variable_specifier  goto 27

state 13
	contract_declaration:  CONTRACT IDENT LBRACE.contract_specifiers RBRACE 
	contract_declaration:  CONTRACT IDENT LBRACE.RBRACE 

	RBRACE  shift 31
	DATA  shift 37
	CONDITION  shift 38
	ACTION  shift 39
	FUNC  shift 5
	.  error

	function_declaration  goto 36
	contract_argument_declaration  goto 33
	contract_condition_declaration  goto 34
	contract_action_declaration  goto 35
	contract_specifier  goto 32
	contract_specifiers  goto 30

state 14
	function_declaration:  FUNC IDENT function_signature compound_statement.    (48)

	.  reduce 48 (src line 240)


state 15
	compound_statement:  LBRACE.RBRACE 
	compound_statement:  LBRACE.block_item_list RBRACE 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	LBRACE  shift 15
	RBRACE  shift 40
	FUNC  shift 5
	VAR  shift 52
	IF  shift 54
	WHILE  shift 55
	BREAK  shift 57
	CONTINUE  shift 56
	INFO  shift 58
	WARNING  shift 59
	ERROR  shift 60
	RETURN  shift 61
	.  error

	primary_expression  goto 68
	expression  goto 48
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67
	block_item_list  goto 41
	block_item  goto 42
	compound_statement  goto 47
	declaration  goto 43
	statement  goto 44
	variable_declaration  goto 46
	function_declaration  goto 45
	selection_statement  goto 49
	iteration_statement  goto 50
	jump_statement  goto 51

state 16
	function_signature:  function_argument_list type.    (46)

	.  reduce 46 (src line 235)


state 17
	type:  T_BOOL.    (29)

	.  reduce 29 (src line 204)


state 18
	type:  T_INT.    (30)

	.  reduce 30 (src line 206)


state 19
	type:  T_FLOAT.    (31)

	.  reduce 31 (src line 207)


state 20
	type:  T_MONEY.    (32)

	.  reduce 32 (src line 208)


state 21
	type:  T_STRING.    (33)

	.  reduce 33 (src line 209)


state 22
	type:  T_BYTES.    (34)

	.  reduce 34 (src line 210)


state 23
	type:  T_ARRAY.    (35)

	.  reduce 35 (src line 211)


state 24
	type:  T_MAP.    (36)

	.  reduce 36 (src line 212)


state 25
	type:  T_FILE.    (37)

	.  reduce 37 (src line 213)


state 26
	function_argument_list:  LPAREN RPAREN.    (44)

	.  reduce 44 (src line 230)


state 27
	variable_specifier:  variable_specifier.COMMA ident_list type 
	variable_specifier:  variable_specifier.COMMA IDENT ELLIPSIS 
	function_argument_list:  LPAREN variable_specifier.RPAREN 

	COMMA  shift 75
	RPAREN  shift 76
	.  error


state 28
	ident_list:  ident_list.COMMA IDENT 
	variable_specifier:  ident_list.type 

	COMMA  shift 77
	T_BOOL  shift 17
	T_INT  shift 18
	T_FLOAT  shift 19
	T_MONEY  shift 20
	T_STRING  shift 21
	T_BYTES  shift 22
	T_ARRAY  shift 23
	T_MAP  shift 24
	T_FILE  shift 25
	.  error

	type  goto 78

state 29
	ident_list:  IDENT.    (38)

	.  reduce 38 (src line 216)


state 30
	contract_specifiers:  contract_specifiers.contract_specifier 
	contract_declaration:  CONTRACT IDENT LBRACE contract_specifiers.RBRACE 

	RBRACE  shift 80
	DATA  shift 37
	CONDITION  shift 38
	ACTION  shift 39
	FUNC  shift 5
	.  error

	function_declaration  goto 36
	contract_argument_declaration  goto 33
	contract_condition_declaration  goto 34
	contract_action_declaration  goto 35
	contract_specifier  goto 79

state 31
	contract_declaration:  CONTRACT IDENT LBRACE RBRACE.    (80)

	.  reduce 80 (src line 310)


state 32
	contract_specifiers:  contract_specifier.    (77)

	.  reduce 77 (src line 303)


state 33
	contract_specifier:  contract_argument_declaration.    (73)

	.  reduce 73 (src line 296)


state 34
	contract_specifier:  contract_condition_declaration.    (74)

	.  reduce 74 (src line 298)


state 35
	contract_specifier:  contract_action_declaration.    (75)

	.  reduce 75 (src line 299)


state 36
	contract_specifier:  function_declaration.    (76)

	.  reduce 76 (src line 300)


state 37
	contract_argument_declaration:  DATA.LBRACE contract_argument_list RBRACE 
	contract_argument_declaration:  DATA.LBRACE RBRACE 

	LBRACE  shift 81
	.  error


state 38
	contract_condition_declaration:  CONDITION.compound_statement 

	LBRACE  shift 15
	.  error

	compound_statement  goto 82

state 39
	contract_action_declaration:  ACTION.compound_statement 

	LBRACE  shift 15
	.  error

	compound_statement  goto 83

state 40
	compound_statement:  LBRACE RBRACE.    (25)

	.  reduce 25 (src line 194)


state 41
	block_item_list:  block_item_list.block_item 
	compound_statement:  LBRACE block_item_list.RBRACE 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	LBRACE  shift 15
	RBRACE  shift 85
	FUNC  shift 5
	VAR  shift 52
	IF  shift 54
	WHILE  shift 55
	BREAK  shift 57
	CONTINUE  shift 56
	INFO  shift 58
	WARNING  shift 59
	ERROR  shift 60
	RETURN  shift 61
	.  error

	primary_expression  goto 68
	expression  goto 48
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67
	block_item  goto 84
	compound_statement  goto 47
	declaration  goto 43
	statement  goto 44
	variable_declaration  goto 46
	function_declaration  goto 45
	selection_statement  goto 49
	iteration_statement  goto 50
	jump_statement  goto 51

state 42
	block_item_list:  block_item.    (23)

	.  reduce 23 (src line 189)


state 43
	block_item:  declaration.    (27)

	.  reduce 27 (src line 199)


state 44
	block_item:  statement.    (28)

	.  reduce 28 (src line 201)


state 45
	declaration:  function_declaration.    (49)

	.  reduce 49 (src line 243)


state 46
	declaration:  variable_declaration.    (50)

	.  reduce 50 (src line 245)


state 47
	statement:  compound_statement.    (51)

	.  reduce 51 (src line 248)


state 48
	expression:  expression.COMMA assignment_expression 
	statement:  expression.    (52)

	COMMA  shift 86
	.  reduce 52 (src line 250)


state 49
	statement:  selection_statement.    (53)

	.  reduce 53 (src line 251)


state 50
	statement:  iteration_statement.    (54)

	.  reduce 54 (src line 252)


state 51
	statement:  jump_statement.    (55)

	.  reduce 55 (src line 253)


state 52
	variable_declaration:  VAR.ident_list type 

	IDENT  shift 29
	.  error

	ident_list  goto 87

state 53
	expression:  assignment_expression.    (21)

	.  reduce 21 (src line 184)


state 54
	selection_statement:  IF.expression statement 
	selection_statement:  IF.expression statement ELSE statement 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 88
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 55
	iteration_statement:  WHILE.expression statement 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 89
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 56
	jump_statement:  CONTINUE.    (59)

	.  reduce 59 (src line 265)


state 57
	jump_statement:  BREAK.    (60)

	.  reduce 60 (src line 267)


state 58
	jump_statement:  INFO.expression 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 90
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 59
	jump_statement:  WARNING.expression 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 91
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 60
	jump_statement:  ERROR.expression 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 92
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 61
	jump_statement:  RETURN.    (64)

	.  reduce 64 (src line 271)


state 62
	assignment_expression:  unary_expression.    (18)

	.  reduce 18 (src line 174)


state 63
	primary_expression:  IDENT.LPAREN argument_expression_list RPAREN 
	primary_expression:  IDENT.LPAREN RPAREN 
	primary_expression:  IDENT.    (3)
	assignment_expression:  IDENT.assignment_operator assignment_expression 

	ASSIGN  shift 95
	LPAREN  shift 93
	.  reduce 3 (src line 108)

	assignment_operator  goto 94

state 64
	postfix_expression:  postfix_expression.LBRAKET expression RBRAKET 
	unary_expression:  postfix_expression.    (11)

	LBRAKET  shift 96
	.  reduce 11 (src line 124)


state 65
	unary_expression:  INC.unary_expression 

	IDENT  shift 98
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	postfix_expression  goto 64
	unary_expression  goto 97
	unary_operator  goto 67

state 66
	unary_expression:  DEC.unary_expression 

	IDENT  shift 98
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	postfix_expression  goto 64
	unary_expression  goto 99
	unary_operator  goto 67

state 67
	unary_expression:  unary_operator.unary_expression 

	IDENT  shift 98
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	postfix_expression  goto 64
	unary_expression  goto 100
	unary_operator  goto 67

state 68
	postfix_expression:  primary_expression.    (7)

	.  reduce 7 (src line 114)


state 69
	unary_operator:  ADD.    (15)

	.  reduce 15 (src line 131)


state 70
	unary_operator:  SUB.    (16)

	.  reduce 16 (src line 133)


state 71
	unary_operator:  NOT.    (17)

	.  reduce 17 (src line 134)


state 72
	primary_expression:  INT.    (4)

	.  reduce 4 (src line 109)


state 73
	primary_expression:  STRING.    (5)

	.  reduce 5 (src line 110)


state 74
	primary_expression:  LPAREN.expression RPAREN 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 101
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 75
	variable_specifier:  variable_specifier COMMA.ident_list type 
	variable_specifier:  variable_specifier COMMA.IDENT ELLIPSIS 

	IDENT  shift 103
	.  error

	ident_list  goto 102

state 76
	function_argument_list:  LPAREN variable_specifier RPAREN.    (45)

	.  reduce 45 (src line 232)


state 77
	ident_list:  ident_list COMMA.IDENT 

	IDENT  shift 104
	.  error


state 78
	variable_specifier:  ident_list type.    (41)

	.  reduce 41 (src line 224)


state 79
	contract_specifiers:  contract_specifiers contract_specifier.    (78)

	.  reduce 78 (src line 305)


state 80
	contract_declaration:  CONTRACT IDENT LBRACE contract_specifiers RBRACE.    (79)

	.  reduce 79 (src line 308)


state 81
	contract_argument_declaration:  DATA LBRACE.contract_argument_list RBRACE 
	contract_argument_declaration:  DATA LBRACE.RBRACE 

	IDENT  shift 108
	RBRACE  shift 106
	.  error

	contract_argument  goto 107
	contract_argument_list  goto 105

state 82
	contract_condition_declaration:  CONDITION compound_statement.    (71)

	.  reduce 71 (src line 290)


state 83
	contract_action_declaration:  ACTION compound_statement.    (72)

	.  reduce 72 (src line 293)


state 84
	block_item_list:  block_item_list block_item.    (24)

	.  reduce 24 (src line 191)


state 85
	compound_statement:  LBRACE block_item_list RBRACE.    (26)

	.  reduce 26 (src line 196)


state 86
	expression:  expression COMMA.assignment_expression 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	postfix_expression  goto 64
	assignment_expression  goto 109
	unary_expression  goto 62
	unary_operator  goto 67

state 87
	ident_list:  ident_list.COMMA IDENT 
	variable_declaration:  VAR ident_list.type 

	COMMA  shift 77
	T_BOOL  shift 17
	T_INT  shift 18
	T_FLOAT  shift 19
	T_MONEY  shift 20
	T_STRING  shift 21
	T_BYTES  shift 22
	T_ARRAY  shift 23
	T_MAP  shift 24
	T_FILE  shift 25
	.  error

	type  goto 110

state 88
	expression:  expression.COMMA assignment_expression 
	selection_statement:  IF expression.statement 
	selection_statement:  IF expression.statement ELSE statement 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	COMMA  shift 86
	LPAREN  shift 74
	LBRACE  shift 15
	IF  shift 54
	WHILE  shift 55
	BREAK  shift 57
	CONTINUE  shift 56
	INFO  shift 58
	WARNING  shift 59
	ERROR  shift 60
	RETURN  shift 61
	.  error

	primary_expression  goto 68
	expression  goto 48
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67
	compound_statement  goto 47
	statement  goto 111
	selection_statement  goto 49
	iteration_statement  goto 50
	jump_statement  goto 51

state 89
	expression:  expression.COMMA assignment_expression 
	iteration_statement:  WHILE expression.statement 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	COMMA  shift 86
	LPAREN  shift 74
	LBRACE  shift 15
	IF  shift 54
	WHILE  shift 55
	BREAK  shift 57
	CONTINUE  shift 56
	INFO  shift 58
	WARNING  shift 59
	ERROR  shift 60
	RETURN  shift 61
	.  error

	primary_expression  goto 68
	expression  goto 48
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67
	compound_statement  goto 47
	statement  goto 112
	selection_statement  goto 49
	iteration_statement  goto 50
	jump_statement  goto 51

state 90
	expression:  expression.COMMA assignment_expression 
	jump_statement:  INFO expression.    (61)

	COMMA  shift 86
	.  reduce 61 (src line 268)


state 91
	expression:  expression.COMMA assignment_expression 
	jump_statement:  WARNING expression.    (62)

	COMMA  shift 86
	.  reduce 62 (src line 269)


state 92
	expression:  expression.COMMA assignment_expression 
	jump_statement:  ERROR expression.    (63)

	COMMA  shift 86
	.  reduce 63 (src line 270)


state 93
	primary_expression:  IDENT LPAREN.argument_expression_list RPAREN 
	primary_expression:  IDENT LPAREN.RPAREN 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	RPAREN  shift 114
	.  error

	primary_expression  goto 68
	argument_expression_list  goto 113
	postfix_expression  goto 64
	assignment_expression  goto 115
	unary_expression  goto 62
	unary_operator  goto 67

state 94
	assignment_expression:  IDENT assignment_operator.assignment_expression 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	postfix_expression  goto 64
	assignment_expression  goto 116
	unary_expression  goto 62
	unary_operator  goto 67

state 95
	assignment_operator:  ASSIGN.    (20)

	.  reduce 20 (src line 180)


state 96
	postfix_expression:  postfix_expression LBRAKET.expression RBRAKET 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	expression  goto 117
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67

state 97
	unary_expression:  INC unary_expression.    (12)

	.  reduce 12 (src line 126)


state 98
	primary_expression:  IDENT.LPAREN argument_expression_list RPAREN 
	primary_expression:  IDENT.LPAREN RPAREN 
	primary_expression:  IDENT.    (3)

	LPAREN  shift 93
	.  reduce 3 (src line 108)


state 99
	unary_expression:  DEC unary_expression.    (13)

	.  reduce 13 (src line 127)


state 100
	unary_expression:  unary_operator unary_expression.    (14)

	.  reduce 14 (src line 128)


state 101
	primary_expression:  LPAREN expression.RPAREN 
	expression:  expression.COMMA assignment_expression 

	COMMA  shift 86
	RPAREN  shift 118
	.  error


state 102
	ident_list:  ident_list.COMMA IDENT 
	variable_specifier:  variable_specifier COMMA ident_list.type 

	COMMA  shift 77
	T_BOOL  shift 17
	T_INT  shift 18
	T_FLOAT  shift 19
	T_MONEY  shift 20
	T_STRING  shift 21
	T_BYTES  shift 22
	T_ARRAY  shift 23
	T_MAP  shift 24
	T_FILE  shift 25
	.  error

	type  goto 119

state 103
	ident_list:  IDENT.    (38)
	variable_specifier:  variable_specifier COMMA IDENT.ELLIPSIS 

	ELLIPSIS  shift 120
	.  reduce 38 (src line 216)


state 104
	ident_list:  ident_list COMMA IDENT.    (39)

	.  reduce 39 (src line 218)


state 105
	contract_argument_list:  contract_argument_list.contract_argument 
	contract_argument_declaration:  DATA LBRACE contract_argument_list.RBRACE 

	IDENT  shift 108
	RBRACE  shift 122
	.  error

	contract_argument  goto 121

state 106
	contract_argument_declaration:  DATA LBRACE RBRACE.    (70)

	.  reduce 70 (src line 287)


state 107
	contract_argument_list:  contract_argument.    (67)

	.  reduce 67 (src line 280)


state 108
	contract_argument:  IDENT.type STRING 
	contract_argument:  IDENT.type 

	T_BOOL  shift 17
	T_INT  shift 18
	T_FLOAT  shift 19
	T_MONEY  shift 20
	T_STRING  shift 21
	T_BYTES  shift 22
	T_ARRAY  shift 23
	T_MAP  shift 24
	T_FILE  shift 25
	.  error

	type  goto 123

state 109
	expression:  expression COMMA assignment_expression.    (22)

	.  reduce 22 (src line 186)


state 110
	variable_declaration:  VAR ident_list type.    (40)

	.  reduce 40 (src line 221)


state 111
	selection_statement:  IF expression statement.    (56)
	selection_statement:  IF expression statement.ELSE statement 

	ELSE  shift 124
	.  reduce 56 (src line 256)


state 112
	iteration_statement:  WHILE expression statement.    (58)

	.  reduce 58 (src line 261)


state 113
	primary_expression:  IDENT LPAREN argument_expression_list.RPAREN 
	argument_expression_list:  argument_expression_list.COMMA assignment_expression 

	COMMA  shift 126
	RPAREN  shift 125
	.  error


state 114
	primary_expression:  IDENT LPAREN RPAREN.    (2)

	.  reduce 2 (src line 107)


state 115
	argument_expression_list:  assignment_expression.    (9)

	.  reduce 9 (src line 119)


state 116
	assignment_expression:  IDENT assignment_operator assignment_expression.    (19)

	.  reduce 19 (src line 177)


state 117
	postfix_expression:  postfix_expression LBRAKET expression.RBRAKET 
	expression:  expression.COMMA assignment_expression 

	COMMA  shift 86
	RBRAKET  shift 127
	.  error


state 118
	primary_expression:  LPAREN expression RPAREN.    (6)

	.  reduce 6 (src line 111)


state 119
	variable_specifier:  variable_specifier COMMA ident_list type.    (42)

	.  reduce 42 (src line 226)


state 120
	variable_specifier:  variable_specifier COMMA IDENT ELLIPSIS.    (43)

	.  reduce 43 (src line 227)


state 121
	contract_argument_list:  contract_argument_list contract_argument.    (68)

	.  reduce 68 (src line 282)


state 122
	contract_argument_declaration:  DATA LBRACE contract_argument_list RBRACE.    (69)

	.  reduce 69 (src line 285)


state 123
	contract_argument:  IDENT type.STRING 
	contract_argument:  IDENT type.    (66)

	STRING  shift 128
	.  reduce 66 (src line 277)


state 124
	selection_statement:  IF expression statement ELSE.statement 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	LBRACE  shift 15
	IF  shift 54
	WHILE  shift 55
	BREAK  shift 57
	CONTINUE  shift 56
	INFO  shift 58
	WARNING  shift 59
	ERROR  shift 60
	RETURN  shift 61
	.  error

	primary_expression  goto 68
	expression  goto 48
	postfix_expression  goto 64
	assignment_expression  goto 53
	unary_expression  goto 62
	unary_operator  goto 67
	compound_statement  goto 47
	statement  goto 129
	selection_statement  goto 49
	iteration_statement  goto 50
	jump_statement  goto 51

state 125
	primary_expression:  IDENT LPAREN argument_expression_list RPAREN.    (1)

	.  reduce 1 (src line 105)


state 126
	argument_expression_list:  argument_expression_list COMMA.assignment_expression 

	IDENT  shift 63
	INT  shift 72
	STRING  shift 73
	ADD  shift 69
	SUB  shift 70
	INC  shift 65
	DEC  shift 66
	NOT  shift 71
	LPAREN  shift 74
	.  error

	primary_expression  goto 68
	postfix_expression  goto 64
	assignment_expression  goto 130
	unary_expression  goto 62
	unary_operator  goto 67

state 127
	postfix_expression:  postfix_expression LBRAKET expression RBRAKET.    (8)

	.  reduce 8 (src line 116)


state 128
	contract_argument:  IDENT type STRING.    (65)

	.  reduce 65 (src line 275)


state 129
	selection_statement:  IF expression statement ELSE statement.    (57)

	.  reduce 57 (src line 258)


state 130
	argument_expression_list:  argument_expression_list COMMA assignment_expression.    (10)

	.  reduce 10 (src line 121)


69 terminals, 34 nonterminals
85 grammar rules, 131/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
83 working sets used
memory: parser 215/120000
67 extra closures
323 shift entries, 1 exceptions
67 goto entries
108 entries saved by goto default
Optimizer space used: output 282/120000
282 table entries, 46 zero
maximum spread: 67, maximum offset: 126
